// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text renders correctly > with align 1`] = `
<span
  className="typography_b59898fd6b primary_98f8177071 center_4ef0a117bc singleLineEllipsis_997d25a8b3"
  data-testid="text"
>
  text
</span>
`;

exports[`Text renders correctly > with color 1`] = `
<span
  className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3"
  data-testid="text"
>
  text
</span>
`;

exports[`Text renders correctly > with element 1`] = `
<p
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3"
  data-testid="text"
>
  text
</p>
`;

exports[`Text renders correctly > with element as children 1`] = `
<span
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3"
  data-testid="text"
>
  <div>
    text
  </div>
</span>
`;

exports[`Text renders correctly > with empty props 1`] = `
<span
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3"
  data-testid="text"
>
  text
</span>
`;

exports[`Text renders correctly > with html attribute 1`] = `
<span
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3"
  data-testid="text"
  role="banner"
>
  text
</span>
`;
